<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory android:title="@string/prefs_cat_time">

        <CheckBoxPreference
                android:key="nautTime"
                android:title="@string/prefs_naut_time"
                android:summary="@string/prefs_naut_time_summary" />
            
    </PreferenceCategory>
   
    <PreferenceCategory android:title="@string/prefs_cat_debug">

        <CheckBoxPreference
                android:key="debugTime"
                android:title="@string/prefs_debug_time"
                android:summary="@string/prefs_debug_time_summary" />
 
        <CheckBoxPreference
                android:key="debugSpace"
                android:title="@string/prefs_debug_space"
                android:summary="@string/prefs_debug_space_summary" />
            
    </PreferenceCategory>
     
</PreferenceScreen>

